--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!--button id="mute">mute</button--><br>
             <img src="cube.gif" style="display:inline;"><span style="font-size:40px;"><strong>Single Line Ma-bob Calculator</strong></span><img src="cube.gif" style="display:inline;">
             <h2>Given Points</h2>
-            <h3>Instructions:<br>fill in the stuff<br>make sure fraction is a decimal (.25 = 1/4)<br>Click the big button that says CONVERT<br>be amazed</h3>
+            <h3>Instructions:<br>fill in the stuff<br>make sure fraction is a decimal (.25 = 1/4)<br>Click the big button that says CONVERT<br>be amazed<br>Note: theta isn't normalized. Im still not sure how to do that. Also, a "Given Angle" calc is in development</h3>
             <button id="convert">CONVERT</button>
             <table>
             <tr><td><strong>Inputs</strong></td><td> </td><td> </td><td><strong>Outputs</strong></td></tr>
