--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <!--THE CONTENT-->
         <div class="onecolp" id="content">
-            <div class="half-buy-button"><a class="linktosheets" href="https://docs.google.com/a/pisd.edu/spreadsheets/d/1peaQ62-wAfCEGwkjW3n2TvBW8oKuf6Pjubg9HCQRyRg/edit?usp=sharing">LINK TO ALL THE SHEETS CALCULATORS</a></div>
+            <div class="half-buy-button"><a class="linktosheets" target="_blank" href="https://docs.google.com/a/pisd.edu/spreadsheets/d/1peaQ62-wAfCEGwkjW3n2TvBW8oKuf6Pjubg9HCQRyRg/edit?usp=sharing">LINK TO ALL THE SHEETS CALCULATORS</a></div>
         </div>
         <div style="height: 30px;"></div>
         
